BUGFIX: Adjust assetsource icon color on hover and active
The icons are always white and when the asset source is active and on a small viewport we switch the background also to white. So the icons are not visible anymore.

This patch will adjust the color of the icon via filter functions.
As we are not able to use the fill rule.

Fixes: #3417

--- a/Neos.Media.Browser/Resources/Private/Styles/Media/_Media.scss
+++ b/Neos.Media.Browser/Resources/Private/Styles/Media/_Media.scss
@@ -112,12 +112,20 @@
 
 						&.neos-active {
 							background-color: #fff;
+
+							.neos-media-assetsource-icon {
+								filter: invert(.5) sepia(1) saturate(5) hue-rotate(175deg);
+							}
 						}
 
 						&:not(.neos-active) {
 							&:hover {
 								background-color: #fff;
 								color: $blue;
+
+								.neos-media-assetsource-icon {
+									filter: invert(.5) sepia(1) saturate(5) hue-rotate(175deg);
+								}
 							}
 
 							&.neos-drag-active::after {
